fix z-index on sidebar

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -42,6 +42,9 @@ ul
 footer.page-edit
   max-width: 1280px;
 
+.sidebar
+  z-index: 11
+
 
 /* iPhone Frame Colors */
 
